--- a/client/package.json
+++ b/client/package.json
@@ -3,18 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-cache-inmemory": "^1.3.9",
-    "apollo-client": "^2.4.5",
-    "apollo-link": "^1.2.3",
-    "apollo-link-error": "^1.1.1",
-    "apollo-link-http": "^1.5.5",
-    "apollo-link-state": "^0.4.2",
-    "graphql": "^14.0.2",
-    "graphql-tag": "^2.10.0",
-    "react": "^16.6.1",
-    "react-apollo": "^2.2.4",
-    "react-dom": "^16.6.1",
-    "react-scripts": "2.1.1"
+    "@apollo/client": "^3.0.0-beta.43",
+    "graphql": "^15.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
